"Foo, LLC" -> "Lorem Ipsum, LLC"

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -14,7 +14,7 @@
     = yield
     %center
       %div.footer
-        Foo, LLC
+        Lorem Ipsum, LLC
         |
         = link_to "Terms of Service", "/terms"
         |
