moar design (login, register)

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,7 +1,8 @@
 %html
   %head
     %title Exchange
-    = stylesheet_link_tag :all
+    = stylesheet_link_tag 'style'
+    = stylesheet_link_tag 'buttons'
     = csrf_meta_tag
   %body
     %div.logo
