--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -26,6 +26,17 @@ a:hover
 .form .R
   text-align left
 
+.big_form
+  padding 20px
+  margin 50px
+  background white
+  border 1px solid #666
+  border-radius 9px
+
+.medium_text_input
+  font-size 110%
+  padding 3px
+  width 
 
 /* Specific */
 
