--- a/app/views/users/register.haml
+++ b/app/views/users/register.haml
@@ -1,2 +1,30 @@
 %center
-  %h2 TODO register
+  %h1 Register
+  %table.form.big_form
+    %tr
+      %td.L
+        %label Username:
+      %td.R
+        %input.medium_text_input{:name => "username", :type => "text"}
+    %tr
+      %td.L
+        %label Password:
+      %td.R
+        %input.medium_text_input{:name => "password", :type => "password"}
+    %tr
+      %td.L
+        %label Email:
+      %td.R
+        %input.medium_text_input{:name => "password", :type => "text"}
+    %tr
+      %td{:colspan => "2"}
+        %input{:name => "terms_privacy_checkbox", :type => "checkbox"}
+        I agree to the
+        = link_to "Terms of Service", "/terms"
+        and
+        = link_to "Privacy Policy", "/privacy"
+    %tr
+      %td{:colspan => "2"}
+        %center
+          %a.B_medium.B_orange.B_register(href="#")
+            %div Register
